--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -3,16 +3,8 @@
 @import 'fonts.scss';
 @import 'mixin.scss';
 
-
-@import 'components/page-main.scss';
 @import 'components/header.scss';
-@import 'components/promo.scss';
-@import 'components/programs.scss';
-@import 'components/advantages.scss';
-@import 'components/example.scss';
+@import 'components/about.scss';
+@import 'components/types.scss';
+@import 'components/video.scss';
 @import 'components/footer.scss';
-@import 'components/main-catalog.scss';
-@import 'components/extension-catalog.scss';
-@import 'components/gift.scss';
-@import 'components/main-form.scss';
-
