--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -1,17 +1,11 @@
 body{
     padding: 0;
     margin: 0;
+    font-family: OpenSans, Arial, sans-serif;
 }
 
 *{
     box-sizing: border-box;
-}
-
-.page-main{
-    margin: 0;
-    padding: 0;
-
-    
 }
 
 .visually-hidden {
