--- a/app/sass/variables.scss
+++ b/app/sass/variables.scss
@@ -1,17 +1,14 @@
 $black: #000000;
 $white: #fff;
-$menu-border-gray: #E6E6E6;
-$background-gray: #F2F2F2;
-$light-gray: #EAEAEA;
-$border-gray: #D9D9D9;
-$special_grey: #CDCDCD;
-$special_dark-grey: #444444;
-$special_dark-grey-2: #222222;
-$basic-green: #68B738;
-$basic-green-2: #5EAA2F;
-$toggler-grey: #DCDCDC;
-$status_error: #FF8282;
-$input-hover: #BABABA;
+$azure: #0AD9C6;
+$title-color: #1F1F1F;
+$footer-color: rgba(0, 0, 0, 0.5);
+$input-color: #1C1C1C;
+$border-color: #C9CCD4;
+$map-desc-color: rgba(0, 0, 0, 0.7);
+$background-black: #131314;
+$background-gray: #F6F7F9;
+$nav-border: rgba(255, 255, 255, 0.2); 
 
 $tab: 768px;
 $desktop: 1280px;
