--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -15,3 +15,11 @@ body{
     height: 1px;
     margin: -1px;
 }
+
+.no-scroll{
+
+    @media screen and (max-width: $desktop){
+        overflow: hidden;
+    }
+    
+}
