--- a/app/sass/variables.scss
+++ b/app/sass/variables.scss
@@ -8,7 +8,12 @@ $border-color: #C9CCD4;
 $map-desc-color: rgba(0, 0, 0, 0.7);
 $background-black: #131314;
 $background-gray: #F6F7F9;
-$nav-border: rgba(255, 255, 255, 0.2); 
+$nav-border: rgba(255, 255, 255, 0.2);
+$nav-color: rgba(255, 255, 255, 0.7);
+$button-close: rgba(20, 21, 23, 0.2);
+$menu-link: #48494D;
+$menu-link-background: #F6F6F6;
+$menu-arrow: rgba(44, 46, 63, 0.5);
 
 $tab: 768px;
 $desktop: 1280px;
