--- a/app/sass/components/about.scss
+++ b/app/sass/components/about.scss
@@ -4,6 +4,10 @@
     grid-template-columns: 1fr;
     text-align: center;
     margin-top: 54px;
+
+    @media screen and (min-width: $desktop){
+        margin-top: 134px;
+    }
 }
 
 .about__title{
@@ -12,18 +16,36 @@
 
 .about__list{
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 35px;
+
+    @media screen and (min-width: $tab){
+        grid-template-columns: 1fr 1fr;
+        max-width: 73%;
+        grid-gap: 45px;
+        row-gap: 40px;
+    }
+
+    @media screen and (min-width: $desktop){
+        grid-template-columns: repeat(4, 1fr);
+        max-width: 1166px;
+        margin-top: 50px;
+    }
 }
 
 .about__item{
     font-size: 18px;
     line-height: 35px;
     letter-spacing: -0.5px;
+
+    @media screen and (min-width: $tab){
+        font-size: 22px;
+        line-height: 34px;
+    }
 }
 
 .about__item-number{
