--- a/app/sass/components/types.scss
+++ b/app/sass/components/types.scss
@@ -4,6 +4,18 @@
     background-color: $background-gray;
     padding-top: 32px;
     padding-bottom: 10px;
+
+    @media screen and (min-width: $tab){
+        margin-top: 54px;
+        padding-top: 50px;
+        padding-bottom: 15px;
+    }
+
+    @media screen and (min-width: $desktop){
+        margin-top: 135px;
+        padding-top: 150px;
+        padding-bottom: 97px;
+    }
 }
 
 .types__title{
@@ -12,17 +24,49 @@
 
 .types__list{
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+
+    @media screen and (min-width: $tab){
+        width: 84%;
+    }
+
+    @media screen and (min-width: $desktop){
+        width: 100%;
+        max-width: 1178px;
+        margin-top: 50px;
+    }
 }
 
 .types__item{
     width: 300px;
     padding-bottom: 20px;
+
+    @media screen and (min-width: $tab){
+        padding-bottom: 30px;
+    }
+
+    @media screen and (min-width: $desktop){
+        width: 342px;
+    }
+
+    &--travel{
+
+        @media screen and (min-width: $desktop){
+            padding-top: 10px;
+        }
+    }
+
+    &--mountain{
+
+        @media screen and (min-width: $desktop){
+            padding-top: 40px;
+        }
+    }
 }
 
 .types__description{
@@ -49,6 +93,51 @@
             bottom: -23px;
             left: -10px;
             z-index: -1;
+
+            @media screen and (min-width: $tab){
+                left: -20px;
+            }
+
+            @media screen and (min-width: $desktop){
+                background-image: url(../images/dest/Ellipse1.svg);
+                width: 180px;
+                height: 180px;
+                bottom: 172px;
+                left: -60px;
+            }
+        }
+    }
+
+    &--mountain{
+
+        &:before{
+
+            @media screen and (min-width: $desktop){
+                content: '';
+                display: block;
+                position: absolute;
+                width: 47px;
+                height: 47px;
+                background-image: url(../images/dest/square.svg);
+                top: -20px;
+                left: -19px;
+                z-index: 5;
+            }
+        }
+
+        &:after{
+
+            @media screen and (min-width: $desktop){
+                content: '';
+                display: block;
+                position: absolute;
+                width: 47px;
+                height: 47px;
+                background-image: url(../images/dest/square.svg);
+                bottom: -17px;
+                right: -23px;
+                z-index: 5;
+            }
         }
     }
 
@@ -64,6 +153,19 @@
             top: -21px;
             right: 1px;
             z-index: 5;
+
+            @media screen and (min-width: $tab){
+                right: -10px;
+                top: -22px;
+            }
+
+            @media screen and (min-width: $desktop){
+                background-image: url(../images/dest/Ellipse2.svg);
+                width: 95px;
+                height: 95px;
+                top: -32px;
+                right: -35px;
+            }
         }
     }
 }
